--- a/css/style.css
+++ b/css/style.css
@@ -119,8 +119,8 @@ li {
 
 .saveOrderBtn {
   position: fixed;
-  top: 0px;
-  right: 0px;
+  top: 5px;
+  right: 20px;
 }
 
 .btn {
@@ -259,6 +259,11 @@ table, th, td {
   .checkout {
     display: inline;
     width: 20%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    overflow-y: scroll;
+    height: 100%;
   }
 
   #orderForm {
