--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,13 @@ h2, h3 {
   margin-bottom: 0;
 }
 
+/* Disable spinner for item input */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .logo {
   position: relative;
   top: 18px;
