--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,14 @@ html {
   font-family: 'Noto Sans', sans-serif;
 }
 
+h2 {
+  font-size: 100%;
+}
+
 h2, h3 {
   text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 #title {
@@ -71,11 +77,6 @@ h2, h3 {
   top: -15px;
   font-family: 'Lora', serif;
   font-size: 160%;
-}
-
-h2, h3 {
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 /* Disable spinner for item input */
@@ -199,13 +200,13 @@ table, th, td {
   display: none;
   width: 20%;
   position: fixed;
-  top: 20px;
+  top: 0;
   right: 0;
   height: 100%;
 }
 
 #checkoutHeader {
-  height: 40px;
+  height: 60px;
 }
 
 #checkoutItems {
@@ -264,7 +265,6 @@ table, th, td {
     right: 20%;
     position: fixed;
     z-index: 1;
-
   }
 
   #title {
@@ -275,8 +275,8 @@ table, th, td {
 
   #customerDetails {
     position: fixed;
-    left: 25%;
-    right: 20%;
+    left: 22.5%;
+    right: 22.5%;
     top: 80px;
     z-index: 2;
     background-color: white;
@@ -284,7 +284,7 @@ table, th, td {
 
   #mainBody {
     position: relative;
-    top: 130px;
+    top: 140px;
   }
 
   nav {
@@ -297,11 +297,6 @@ table, th, td {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-  }
-
-  .btnShops {
-    margin-right: 5px;
-    width: 40%;
   }
 
   .checkboxes {
