--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,7 @@ table, th, td {
   width: 95%;
   height: 100%;
   background: url('loading.gif') no-repeat center center;
+  z-index: 5;
 }
 
 .center {
