--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ table, th, td {
   z-index: 5;
 }
 
-/* Generic styling for centering text */
+/* Generic styling classes */
 .center {
   text-align: center;
 }
@@ -237,6 +237,15 @@ table, th, td {
 
 #checkoutItems {
   overflow-y: auto;
+}
+
+.checkoutButtons {
+  float: right;
+  margin-top: 5px;
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  font-size: 10px;
 }
 
 /* Packing slip stylving */
