--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,10 @@ h2 {
   width: 50px;
 }
 
+.greeting {
+  display: none;
+}
+
 .chooseShopHeader {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -203,9 +207,13 @@ table, th, td {
 
 #loading {
   position: fixed;
-  width: 95%;
   height: 100%;
-  background: url('loading.gif') no-repeat center center;
+  width: 100%;
+  margin: 0 auto;
+  background-image: url('loading.gif');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: 30%;
   z-index: 5;
 }
 
@@ -219,6 +227,98 @@ table, th, td {
   position: fixed;
   bottom: 0;
   left: 0;
+}
+
+/* Log in menu classes */
+.login-card {
+  position: relative;
+  top: 100px;
+  padding: 40px;
+  width: 274px;
+  background-color: #F7F7F7;
+  margin: 0 auto 10px;
+  border-radius: 2px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+}
+
+.login-card h1 {
+  font-weight: 100;
+  text-align: center;
+  font-size: 2.3em;
+}
+
+.login-card input[type=submit] {
+  width: 100%;
+  display: block;
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.login-card input[type=text], input[type=password], input[type=email] {
+  height: 44px;
+  font-size: 16px;
+  width: 100%;
+  margin-bottom: 10px;
+  -webkit-appearance: none;
+  background: #fff;
+  border: 1px solid #d9d9d9;
+  border-top: 1px solid #c0c0c0;
+  /* border-radius: 2px; */
+  padding: 0 8px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
+.login-card input[type=text]:hover, input[type=password]:hover {
+  border: 1px solid #b9b9b9;
+  border-top: 1px solid #a0a0a0;
+  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+}
+
+.login {
+  text-align: center;
+  font-size: 14px;
+  font-family: 'Arial', sans-serif;
+  font-weight: 700;
+  height: 36px;
+  padding: 0 8px;
+/* border-radius: 3px; */
+/* -webkit-user-select: none;
+  user-select: none; */
+}
+
+.login-submit {
+  /* border: 1px solid #3079ed; */
+  border: 0px;
+  color: #fff;
+  text-shadow: 0 1px rgba(0,0,0,0.1);
+  background-color: #4d90fe;
+  /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
+}
+
+.login-submit:hover {
+  /* border: 1px solid #2f5bb7; */
+  border: 0px;
+  text-shadow: 0 1px rgba(0,0,0,0.3);
+  background-color: #357ae8;
+  /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
+}
+
+.login-card a {
+  text-decoration: none;
+  color: #666;
+  font-weight: 400;
+  text-align: center;
+  display: inline-block;
+  opacity: 0.6;
+  transition: opacity ease 0.5s;
+}
+
+.login-card a:hover {
+  opacity: 1;
 }
 
 /* Styling the side panel showing shopping cart */
@@ -294,6 +394,15 @@ table, th, td {
     right: 20%;
     position: fixed;
     z-index: 1;
+  }
+
+  .greeting {
+    display: inline;
+    margin: 5px 0 0 5px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 5;
   }
 
   #title {
