--- a/css/style.css
+++ b/css/style.css
@@ -210,10 +210,7 @@ table, th, td {
   height: 100%;
   width: 100%;
   margin: 0 auto;
-  background-image: url('loading.gif');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: 30%;
+  background: url('loading.gif') no-repeat center center;
   z-index: 5;
 }
 
