feat: Prices now appear and change according to customer

--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,10 @@ input[type=number]::-webkit-outer-spin-button {
   width: 100px;
 }
 
+.invoicePriceInput {
+  width: 80px;
+}
+
 .invoicePriceTotal {
   width: 150px;
 }
