--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,10 @@ h2 {
   font-size: 160%;
 }
 
+.right {
+  float: right;
+}
+
 .logo {
   position: relative;
   top: 18px;
@@ -437,8 +441,8 @@ input[type=number]::-webkit-outer-spin-button {
   border: 1px solid black;
 }
 
-.packingTableTotal {
-  float: right;
+.packingPaymentInfo {
+  font-size: 9px;
 }
 
 .packingSign {
